First full draft of opener.

--- a/script.fountain
+++ b/script.fountain
@@ -1,4 +1,4 @@
-title: Recycling
+title: RECYCLING
 credit: written by
 author: Julius Seporaitis
 format: screenplay
@@ -25,7 +25,7 @@ INT. MAGIC CIRCLE - DEVANT ROOM - MONDAY NIGHT
 
 # Opener: I Took A New Hobby
 
-Magician comes in front of a small table in front of an audience.
+Magician stands in front of a small table in front of an audience.
 
 JULIUS
 Recently I picked up a new hobby. No, it's not magic.
@@ -44,4 +44,23 @@ Starts unfolding the bill two times. Quarter of a real bill is now visible.
 JULIUS
 It is recycling.
 (unfolds two more times)
-Taking unused rubbish and turning it into something useful.
+Taking unused rubbish and turning it into something useful. Like money.
+
+Magician gives the bill for the audience to inspect.
+
+JULIUS
+I am sure you've heard the word. Uttered proud, or, sometimes, in doubt. One thing certain - it feels good to bring an old and unused thing back to life.
+
+/* ^ This is cheesy and pretentious, but leave it there until something better comes to mind. */
+
+Magician takes back the bill from the audience and proceeds to fold it twice.
+
+JULIUS
+But like all new things - they eventually become old.
+(folds two more times)
+Because they cannot last forever.
+
+Unfolding a blank piece of paper again.
+
+JULIUS
+That's the essence of my new hobby.
