Some more additions.

--- a/recycling.fountain
+++ b/recycling.fountain
@@ -29,7 +29,7 @@ Magician stands in front of a small table in front of an audience.
 
 JULIUS
 Recently I picked up a new hobby. No, it's not magic.
-(pause)
+(beat)
 But I still want to share it with you.
 
 Takes a blank piece of paper, with visible fold marks showing both sides. Starts to fold it in halves twice.
@@ -64,3 +64,22 @@ Unfolding a blank piece of paper again.
 
 JULIUS
 That's the essence of my new hobby.
+
+/* ^ blargh, could do with a better final sentence or a segway into next segment. */
+
+# Middle: Know Your Trash
+
+# Closer: One Mans Trash - Another Mans Treasure
+
+Magician brings out a small jewelery box and sets it on the far left corner of the table.
+
+JULIUS
+This is something for later.
+(sets the box)
+For now,
+(spreading a deck on the table)
+I would like you to pick a card that you think is worth throwing out.
+
+Alice picks seven of clubs which she proceeds to try and loose in the deck, but it always comes back to the top. Until finally - it's completely gone from the deck.
+
+/* ^ fill this in later. */
