A few more ideas.

--- a/recycling.fountain
+++ b/recycling.fountain
@@ -67,7 +67,20 @@ That's the essence of my new hobby.
 
 /* ^ blargh, could do with a better final sentence or a segway into next segment. */
 
-# Middle: Know Your Trash
+# Middle: Recycle Your Ropes
+
+JULIUS
+Another thing that yields to being reused is... ropes,
+(beat)
+from last night.
+
+/* "Don't tell anyone, it's our little secret." - GAG */
+
+Magician takes three different length ropes and makes them change length, merge and unmerge at whim.
+
+# Middle: Know Your Trash (sorting routine)
+
+Spectator without any help from magician sorts splits red cards from black cards without seeing the faces.
 
 # Closer: One Mans Trash - Another Mans Treasure
 
