Some more ideas.

--- a/recycling.fountain
+++ b/recycling.fountain
@@ -70,9 +70,7 @@ That's the essence of my new hobby.
 # Middle: Recycle Your Ropes
 
 JULIUS
-Another thing that yields to being reused is... ropes,
-(beat)
-from last night.
+Another thing that yields to being reused is... found more in some bedrooms, than others.
 
 /* "Don't tell anyone, it's our little secret." - GAG */
 
@@ -87,12 +85,61 @@ Spectator without any help from magician sorts splits red cards from black cards
 Magician brings out a small jewelery box and sets it on the far left corner of the table.
 
 JULIUS
-This is something for later.
+This is will be a surprise after my last performance.
 (sets the box)
 For now,
-(spreading a deck on the table)
-I would like you to pick a card that you think is worth throwing out.
+(spreading a deck face up)
+I would like you to pick a card that you would like to loose. Just not a picture card.
+
+Alice picks seven of clubs. Magician picks a sharpie out of the pocket.
+
+JULIUS
+Please, write your name on the card.
+
+Alice does as told.
+
+JULIUS
+Now, for the rest of the cards is a pretty ordinary day.
+(beat)
+Except for this seven of clubs. We want to loose it!
+
+Magician pushes the card into the middle of the deck.
+
+JULIUS
+But you see? Hop!
+(hops the deck up)
+It is an important card. So it jumps to the top.
+
+Turns over to reveal that indeed - the top card is the signed card.
+
+JULIUS
+We don't want it here!
 
 Alice picks seven of clubs which she proceeds to try and loose in the deck, but it always comes back to the top. Until finally - it's completely gone from the deck.
 
 /* ^ fill this in later. */
+
+JULIUS
+Alice, your card is gone! Lost! But not forever.
+(beat)
+Have you ever heard saying:
+"One mans trash - another mans treasure?"
+
+Alice agrees. Or does not - no matter.
+
+JULIUS
+Well, I have good news! All this time we were trying to get rid of your card - I actually held it dear to me. It has your name on it!
+(beat)
+Where? Remember I talked about surprise in the beginning.
+
+Magician points to the box on the table. Picks it up and opens it - there is a folded card inside.
+
+JULIUS
+All the time I held the card in my favourite jewelery box.
+(beat)
+Why? Because one man's trash is another mans treasure.
+
+Unfolds the card to show it is Alice's signed card.
+
+JULIUS
+I hope you enjoyed. Thank you!
