Closer script scaffolding.

--- a/recycling.fountain
+++ b/recycling.fountain
@@ -19,6 +19,20 @@ idea tree:
   - sorting (OOTW)
   - reusing (BS)
   - planet
+
+jokes:
+
+- Q: Why are environmentalists bad at playing cards? A: They like to
+  avoid the flush.
+
+- Tom Cruise is about to sign up to a new, high-tech, eco thriller:
+  Mission Compostable.
+
+- A parish priest is to offer ‘eco-sinners’ the chance to confess in
+  what is thought to be the first ‘green’ confessional booth.
+  Obviously you can’t confess all your sins in one go but must
+  separate bottle, paper and plastic confessions.
+
 */
 
 INT. MAGIC CIRCLE - DEVANT ROOM - MONDAY NIGHT
@@ -53,6 +67,8 @@ I am sure you've heard the word. Uttered proud, or, sometimes, in doubt. One thi
 
 /* ^ This is cheesy and pretentious, but leave it there until something better comes to mind. */
 
+/* Joke: "What is more expensive than paper? Recycled paper." */
+
 Magician takes back the bill from the audience and proceeds to fold it twice.
 
 JULIUS
@@ -82,7 +98,7 @@ Spectator without any help from magician sorts splits red cards from black cards
 
 # Closer: One Mans Trash - Another Mans Treasure
 
-Magician brings out a small jewelery box and sets it on the far left corner of the table.
+Magician brings out a small old-looking box and sets it at the front of the table.
 
 JULIUS
 This is will be a surprise after my last performance.
@@ -99,9 +115,14 @@ Please, write your name on the card.
 Alice does as told.
 
 JULIUS
-Now, for the rest of the cards is a pretty ordinary day.
+Now, for the rest of the cards it is a pretty ordinary day.
 (beat)
-Except for this seven of clubs. We want to loose it!
+Except for this seven of clubs. It is special.
+(beat)
+And we are going to play a game I call: one mans trash - another mans treasure.
+
+JULIUS
+This card is a treasure for you, but for me - I don't want it. So I'll loose it.
 
 Magician pushes the card into the middle of the deck.
 
@@ -110,34 +131,180 @@ But you see? Hop!
 (hops the deck up)
 It is an important card. So it jumps to the top.
 
-Turns over to reveal that indeed - the top card is the signed card.
+Turns over the top card to reveal that indeed - it is the signed card.
 
 JULIUS
-We don't want it here!
-
-Alice picks seven of clubs which she proceeds to try and loose in the deck, but it always comes back to the top. Until finally - it's completely gone from the deck.
-
-/* ^ fill this in later. */
-
-JULIUS
-Alice, your card is gone! Lost! But not forever.
+This happened to fast, didn't it!
 (beat)
-Have you ever heard saying:
-"One mans trash - another mans treasure?"
+Let me do it slowly. It's somewhere about the middle this time.
 
-Alice agrees. Or does not - no matter.
-
-JULIUS
-Well, I have good news! All this time we were trying to get rid of your card - I actually held it dear to me. It has your name on it!
-(beat)
-Where? Remember I talked about surprise in the beginning.
-
-Magician points to the box on the table. Picks it up and opens it - there is a folded card inside.
+Magician slowly takes the top card and very openly pushes it in the middle of the deck.
 
 JULIUS
-All the time I held the card in my favourite jewelery box.
+But this card... you like it don't you?
+(hops the wrist slowly)
+It cannot be, yeah?
+
+Slowly takes the top card and turns it over - it is the signed seven of clubs!
+
+JULIUS
+And yet!
+(shows the card)
+
+JULIUS
+You know, I became a magician to find out how I do this.
+
+/* TODO: ^ this is Tommy Wonder gag :( find something fresh */
+
+While audience reacts...
+
+JULIUS
+I'll do it one more time. Very slowly.
 (beat)
-Why? Because one man's trash is another mans treasure.
+You will get every chance to see how it is *NOT* done.
+
+Magician puts the card face up on top of the deck and turns it over with one finger.
+
+JULIUS
+It's honest so far, right?
+(beat)
+I'll pull up my sleeves so nothing can happen.
+
+Pulls up sleeves and takes the top card. Riffles the deck and inserts the card somewhere in the middle, leaving it protruded. Get's ready to push it into the deck, when suddenly feels suspicion.
+
+JULIUS
+No no. It's really there. Not on top yet.
+
+Takes out the card from the middle - it is the signed card.
+
+JULIUS
+If was on top to begin with - it would be cheating.
+(beat)
+Anyway... into the deck!
+
+Magician again riffles the pack and inserts the card in the middle, leaving it protruding. Audience feels suspicious again...
+
+JULIUS
+No no, it's okay!
+(beat)
+They don't trust me there.
+(beat)
+I look honest don't I?
+
+Inserts the card face up into the pack, leaving it protruding.
+
+JULIUS
+I'll do it this way.
+(pushing the card into the deck)
+This way you can see that all cheating is absolutely honest.
+
+Audience reacts. Magician spreads the deck to show the card face up somewhere in the middle of the pack.
+
+JULIUS
+There is a small problem when the card is upside down.
+
+Someone says "What's that?"
+
+JULIUS
+The whole trick does not work anymore.
+(beat)
+Because to show it's face it needs to come to the top, like that.
+
+Shows some card (an ace of clubs) on the top of the deck face up.
+
+JULIUS
+But if you cover it with the ace of club.
+(turns over ace of clubs)
+Hop!
+
+Takes the ace of clubs from the top, the card underneath is the signed card - face up.
+
+JULIUS
+If you watch carefully, you see.
+
+Puts the signed card face down into the middle of the deck.
+
+JULIUS
+You don't need to cover it at all.
+
+Puts the ace of clubs on the bottom.
+
+JULIUS
+Hop!
+(beat)
+It goes back to the top like normal.
+
+Audience reacts.
+
+JULIUS
+Sometimes I need people who think I cheat.
+(beat)
+Not you. Not you - other people.
+(beat)
+They think I do something very fast, they can't see.
+
+Magician inserts the card into the middle of the deck, leaving it protruding and showing it to the audience.
+
+JULIUS
+No no! I don't do anything with my fingers.
+(beat)
+I will only use... my finger tips.
+(beat)
+Two fingers. Not more.
+
+Sets the deck on the table with one card protruding.
+
+JULIUS
+Now... this way there is no way for me to cheat. And no. fast. movements.
+(pushes card into the deck with two fingers)
+I'm not going too fast. Am I?
+
+Magician draws attention to the side of the deck.
+
+JULIUS
+You can see it best from this side. Hop!
+(lifts the deck with two fingers)
+Did you see it happen?
+
+Someone says "No"
+
+JULIUS
+Me neither.
+(beat)
+But it's there!
+
+Turns over the top card - it's the signed seven of clubs.
+
+JULIUS
+Alice, remember the name of this game?
+(beat)
+"One mans trash - another mans treasure."
+
+Alice agrees.
+
+JULIUS
+All the time while we were trying to loose this card, I actually held it dear to me.
+(beat)
+It is not in the deck.
+(beat)
+I keep it separate.
+(beat)
+Folded.
+(beat)
+Here!
+(beat)
+In this little box.
+
+Magician points to the box on the table. Picks it up and opens it - there is a folded card inside. Starts to unfold it.
+
+JULIUS
+What I don't understand.
+(beat)
+Is how you put your name.
+(beat)
+On my card.
+(beat)
+In my box!
 
 Unfolds the card to show it is Alice's signed card.
 
