--- a/recycling.tex
+++ b/recycling.tex
@@ -182,7 +182,7 @@ Magician stands in front of a small table in front of an audience.
 
 \begin{dialog}{JULIUS}
 Recently I picked up a new hobby. No, it's not magic.
-\paren{(pause)}
+\paren{(beat)}
 But I still want to share it with you.
 \end{dialog}
 
@@ -220,6 +220,255 @@ Unfolding a blank piece of paper again.
 
 \begin{dialog}{JULIUS}
 That's the essence of my new hobby.
+\end{dialog}
+
+\begin{dialog}{JULIUS}
+Another thing that yields to being reused is... found more in some bedrooms, than others.
+\end{dialog}
+
+Magician takes three different length ropes and makes them change length, merge and unmerge at whim.
+
+Spectator without any help from magician sorts splits red cards from black cards without seeing the faces.
+
+Magician brings out a small old-looking box and sets it at the front of the table.
+
+\begin{dialog}{JULIUS}
+This is will be a surprise after my last performance.
+\paren{(sets the box)}
+For now,
+\paren{(spreading a deck face up)}
+I would like you to pick a card that you would like to loose. Just not a picture card.
+\end{dialog}
+
+Alice picks seven of clubs. Magician picks a sharpie out of the pocket.
+
+\begin{dialog}{JULIUS}
+Please, write your name on the card.
+\end{dialog}
+
+Alice does as told.
+
+\begin{dialog}{JULIUS}
+Now, for the rest of the cards it is a pretty ordinary day.
+\paren{(beat)}
+Except for this seven of clubs. It is special.
+\paren{(beat)}
+And we are going to play a game I call: one mans trash - another mans treasure.
+\end{dialog}
+
+\begin{dialog}{JULIUS}
+This card is a treasure for you, but for me - I don't want it. So I'll loose it.
+\end{dialog}
+
+Magician pushes the card into the middle of the deck.
+
+\begin{dialog}{JULIUS}
+But you see? Hop!
+\paren{(hops the deck up)}
+It is an important card. So it jumps to the top.
+\end{dialog}
+
+Turns over the top card to reveal that indeed - it is the signed card.
+
+\begin{dialog}{JULIUS}
+This happened to fast, didn't it!
+\paren{(beat)}
+Let me do it slowly. It's somewhere about the middle this time.
+\end{dialog}
+
+Magician slowly takes the top card and very openly pushes it in the middle of the deck.
+
+\begin{dialog}{JULIUS}
+But this card... you like it don't you?
+\paren{(hops the wrist slowly)}
+It cannot be, yeah?
+\end{dialog}
+
+Slowly takes the top card and turns it over - it is the signed seven of clubs!
+
+\begin{dialog}{JULIUS}
+And yet!
+\paren{(shows the card)}
+\end{dialog}
+
+\begin{dialog}{JULIUS}
+You know, I became a magician to find out how I do this.
+\end{dialog}
+
+While audience reacts...
+
+\begin{dialog}{JULIUS}
+I'll do it one more time. Very slowly.
+\paren{(beat)}
+You will get every chance to see how it is \emph{NOT} done.
+\end{dialog}
+
+Magician puts the card face up on top of the deck and turns it over with one finger.
+
+\begin{dialog}{JULIUS}
+It's honest so far, right?
+\paren{(beat)}
+I'll pull up my sleeves so nothing can happen.
+\end{dialog}
+
+Pulls up sleeves and takes the top card. Riffles the deck and inserts the card somewhere in the middle, leaving it protruded. Get's ready to push it into the deck, when suddenly feels suspicion.
+
+\begin{dialog}{JULIUS}
+No no. It's really there. Not on top yet.
+\end{dialog}
+
+Takes out the card from the middle - it is the signed card.
+
+\begin{dialog}{JULIUS}
+If was on top to begin with - it would be cheating.
+\paren{(beat)}
+Anyway... into the deck!
+\end{dialog}
+
+Magician again riffles the pack and inserts the card in the middle, leaving it protruding. Audience feels suspicious again...
+
+\begin{dialog}{JULIUS}
+No no, it's okay!
+\paren{(beat)}
+They don't trust me there.
+\paren{(beat)}
+I look honest don't I?
+\end{dialog}
+
+Inserts the card face up into the pack, leaving it protruding.
+
+\begin{dialog}{JULIUS}
+I'll do it this way.
+\paren{(pushing the card into the deck)}
+This way you can see that all cheating is absolutely honest.
+\end{dialog}
+
+Audience reacts. Magician spreads the deck to show the card face up somewhere in the middle of the pack.
+
+\begin{dialog}{JULIUS}
+There is a small problem when the card is upside down.
+\end{dialog}
+
+Someone says "What's that?"
+
+\begin{dialog}{JULIUS}
+The whole trick does not work anymore.
+\paren{(beat)}
+Because to show it's face it needs to come to the top, like that.
+\end{dialog}
+
+Shows some card (an ace of clubs) on the top of the deck face up.
+
+\begin{dialog}{JULIUS}
+But if you cover it with the ace of club.
+\paren{(turns over ace of clubs)}
+Hop!
+\end{dialog}
+
+Takes the ace of clubs from the top, the card underneath is the signed card - face up.
+
+\begin{dialog}{JULIUS}
+If you watch carefully, you see.
+\end{dialog}
+
+Puts the signed card face down into the middle of the deck.
+
+\begin{dialog}{JULIUS}
+You don't need to cover it at all.
+\end{dialog}
+
+Puts the ace of clubs on the bottom.
+
+\begin{dialog}{JULIUS}
+Hop!
+\paren{(beat)}
+It goes back to the top like normal.
+\end{dialog}
+
+Audience reacts.
+
+\begin{dialog}{JULIUS}
+Sometimes I need people who think I cheat.
+\paren{(beat)}
+Not you. Not you - other people.
+\paren{(beat)}
+They think I do something very fast, they can't see.
+\end{dialog}
+
+Magician inserts the card into the middle of the deck, leaving it protruding and showing it to the audience.
+
+\begin{dialog}{JULIUS}
+No no! I don't do anything with my fingers.
+\paren{(beat)}
+I will only use... my finger tips.
+\paren{(beat)}
+Two fingers. Not more.
+\end{dialog}
+
+Sets the deck on the table with one card protruding.
+
+\begin{dialog}{JULIUS}
+Now... this way there is no way for me to cheat. And no. fast. movements.
+\paren{(pushes card into the deck with two fingers)}
+I'm not going too fast. Am I?
+\end{dialog}
+
+Magician draws attention to the side of the deck.
+
+\begin{dialog}{JULIUS}
+You can see it best from this side. Hop!
+\paren{(lifts the deck with two fingers)}
+Did you see it happen?
+\end{dialog}
+
+Someone says "No"
+
+\begin{dialog}{JULIUS}
+Me neither.
+\paren{(beat)}
+But it's there!
+\end{dialog}
+
+Turns over the top card - it's the signed seven of clubs.
+
+\begin{dialog}{JULIUS}
+Alice, remember the name of this game?
+\paren{(beat)}
+"One mans trash - another mans treasure."
+\end{dialog}
+
+Alice agrees.
+
+\begin{dialog}{JULIUS}
+All the time while we were trying to loose this card, I actually held it dear to me.
+\paren{(beat)}
+It is not in the deck.
+\paren{(beat)}
+I keep it separate.
+\paren{(beat)}
+Folded.
+\paren{(beat)}
+Here!
+\paren{(beat)}
+In this little box.
+\end{dialog}
+
+Magician points to the box on the table. Picks it up and opens it - there is a folded card inside. Starts to unfold it.
+
+\begin{dialog}{JULIUS}
+What I don't understand.
+\paren{(beat)}
+Is how you put your name.
+\paren{(beat)}
+On my card.
+\paren{(beat)}
+In my box!
+\end{dialog}
+
+Unfolds the card to show it is Alice's signed card.
+
+\begin{dialog}{JULIUS}
+I hope you enjoyed. Thank you!
 \end{dialog}
 
 \end{document}
